--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -24,6 +24,9 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
+        <argument
+            android:name="selectedItem"
+            app:argType="project.st991488104.krutik.data.models.ExerciseData" />
     </fragment>
     <fragment
         android:id="@+id/listFragment"
