--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -24,9 +24,7 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
-        <argument
-            android:name="selectedItem"
-            app:argType="project.st991488104.krutik.data.models.ExerciseData" />
+
     </fragment>
     <fragment
         android:id="@+id/listFragment"
@@ -47,6 +45,10 @@
             app:exitAnim="@anim/to_right"
             app:popEnterAnim="@anim/from_right"
             app:popExitAnim="@anim/to_left" />
+<!--        <argument-->
+<!--            android:name="selectItem"-->
+<!--            app:argType="project.st991488104.krutik.data.models.ExerciseData" />-->
+
     </fragment>
     <fragment
         android:id="@+id/addFragment"
