--- a/app/src/main/res/layout/exercise_row_layout.xml
+++ b/app/src/main/res/layout/exercise_row_layout.xml
@@ -30,7 +30,6 @@
                 android:textColor="@color/darkGray"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +44,7 @@
             android:layout_height="20sp"
             android:layout_marginEnd="16dp"
             android:baselineAligned="false"
-            android:src="@drawable/ic_baseline_menu_24"
+            android:src="@drawable/ic_baseline_delete_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="10dp"
@@ -55,7 +54,7 @@
             android:id="@+id/dateCreated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date Created"
+            android:text="@{exerciseData.date.toString()}"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="5dp"
             android:textSize="14sp"
