--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,6 +13,7 @@
         android:id="@+id/listLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/lightGray"
         tools:context=".fragments.list.ListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -46,13 +47,14 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
-            android:src="@drawable/ic_no_data"
+            android:src="@drawable/checklist"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/recyclerView"
             app:layout_constraintTop_toTopOf="@+id/recyclerView"
-            app:layout_constraintVertical_bias="0.37" />
+            app:layout_constraintVertical_bias="0.37"
+            app:srcCompat="@drawable/checklist" />
 
         <TextView
             android:id="@+id/no_data_textView"
@@ -61,7 +63,9 @@
             android:layout_marginTop="12dp"
             android:alpha="0.5"
             android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
-            android:text="@string/no_data"
+            android:shadowColor="#FFFFFF"
+            android:text="@string/no_task"
+            android:textColor="@color/darkGray"
             android:textSize="16sp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
