--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#A669FB"
+        android:background="@drawable/ic_consistence_background"
         app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword">
 
@@ -26,6 +26,7 @@
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +42,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/btnLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +53,7 @@
             android:layout_width="237dp"
             android:layout_height="38dp"
             android:layout_marginBottom="37dp"
-            android:background="#E6E6E6"
+            android:background="@color/white"
             android:fontFamily="sans-serif"
             android:text="Login"
             android:textSize="18sp"
@@ -65,8 +67,9 @@
             android:layout_width="239dp"
             android:layout_height="44dp"
             android:layout_marginBottom="125dp"
-            android:background="#2BEFC1"
+            android:background="@color/colorPrimaryDark"
             android:text="Register"
+            android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
