--- a/app/src/main/res/drawable/item_background.xml
+++ b/app/src/main/res/drawable/item_background.xml
@@ -3,18 +3,10 @@
 
     <solid android:color="@color/white"/>
     <stroke android:width="1dp" android:color="@color/lightGray"/>
-    <corners android:radius="16dp"/>
-    <gradient
-        android:gradientRadius="200dp"
-        android:endColor="#9D46FF"
-        android:startColor="#FFFFFF"
-        android:type="radial" />
 
-    <corners
-        android:radius="0dp"/>
 
-<!--    <gradient android:angle="180"-->
-<!--        android:endColor="#9D46FF"-->
-<!--        android:startColor="#FFFFFF"-->
-<!--        android:type="linear" />-->
+    <gradient android:angle="180"
+        android:endColor="#FFFFFF"
+        android:startColor="#E6E6E6"
+        android:type="linear" />
 </shape>
