--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
+    android:background="@drawable/ic_consistence_background"
     android:padding="24dp"
     tools:context=".fragments.add.AddFragment">
 
@@ -13,13 +13,14 @@
         android:id="@+id/title_et"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@android:color/transparent"
+        android:background="?attr/colorControlHighlight"
         android:ems="10"
         android:hint="@string/title"
         android:inputType="textPersonName"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
         android:shadowColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,6 +54,7 @@
         android:paddingStart="24dp"
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
+        android:textColor="@color/white"
         android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
