--- a/app/src/main/res/layout/fragment_exercise_list.xml
+++ b/app/src/main/res/layout/fragment_exercise_list.xml
@@ -13,7 +13,7 @@
         android:id="@+id/exListLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#0F4793"
+        android:background="@drawable/ic_consistence_background"
         tools:context=".fragments.list.ExerciseListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
