--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -62,9 +62,10 @@
 
         <Button
             android:id="@+id/btnSignup"
-            android:layout_width="225dp"
-            android:layout_height="0dp"
+            android:layout_width="235dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="28dp"
+            android:background="@color/white"
             android:text="Sign Up"
             app:layout_constraintBottom_toTopOf="@+id/btnLogin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,11 +74,12 @@
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="226dp"
-            android:layout_height="0dp"
+            android:layout_width="235dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="100dp"
             android:background="@color/colorPrimaryDark"
             android:text="Login Page"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
