--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,13 +20,15 @@
             android:id="@+id/editTextEmail"
             android:layout_width="290dp"
             android:layout_height="86dp"
-            android:layout_marginStart="57dp"
-            android:layout_marginEnd="57dp"
-            android:layout_marginBottom="25dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="20dp"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,15 +36,17 @@
 
         <EditText
             android:id="@+id/editTextPassword"
-            android:layout_width="305dp"
-            android:layout_height="94dp"
-            android:layout_marginStart="55dp"
-            android:layout_marginEnd="55dp"
-            android:layout_marginBottom="94dp"
+            android:layout_width="290dp"
+            android:layout_height="86dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/btnLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +54,10 @@
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="235dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="37dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@color/white"
             android:fontFamily="sans-serif"
             android:text="Login"
@@ -64,8 +69,9 @@
 
         <Button
             android:id="@+id/btnRegister"
-            android:layout_width="235dp"
-            android:layout_height="40dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="125dp"
             android:background="@color/colorPrimaryDark"
             android:text="Register"
