--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -16,11 +16,10 @@
 
         <EditText
             android:id="@+id/editEmail"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="69dp"
-            android:layout_marginEnd="69dp"
-            android:layout_marginBottom="23dp"
+            android:layout_width="290dp"
+            android:layout_height="86dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
@@ -32,9 +31,10 @@
 
         <EditText
             android:id="@+id/editPassword"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="30dp"
+            android:layout_width="290dp"
+            android:layout_height="86dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -46,11 +46,10 @@
 
         <EditText
             android:id="@+id/editConfirmpass"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="69dp"
-            android:layout_marginEnd="69dp"
-            android:layout_marginBottom="45dp"
+            android:layout_width="290dp"
+            android:layout_height="86dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:ems="10"
             android:hint="Confirm Password"
             android:inputType="textPassword"
@@ -62,11 +61,13 @@
 
         <Button
             android:id="@+id/btnSignup"
-            android:layout_width="235dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="28dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@color/white"
             android:text="Sign Up"
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/btnLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,12 +75,14 @@
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="235dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="100dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="125dp"
             android:background="@color/colorPrimaryDark"
             android:text="Login Page"
             android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,12 +92,13 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="76dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="60dp"
+            android:fontFamily="sans-serif-medium"
             android:shadowColor="#FFFFFF"
             android:text="Register"
             android:textColor="#FFFFFF"
-            android:textSize="36sp"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/editEmail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
