--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
-    app:startDestination="@id/exerciseListFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/exerciseListFragment"
@@ -43,7 +43,8 @@
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
+            app:popExitAnim="@anim/to_right"
+            app:popUpTo="@id/listFragment"/>
         <action
             android:id="@+id/action_listFragment_to_updateFragment"
             app:destination="@id/updateFragment"
@@ -51,6 +52,7 @@
             app:exitAnim="@anim/to_right"
             app:popEnterAnim="@anim/from_right"
             app:popExitAnim="@anim/to_left"
+            app:popUpTo="@id/listFragment"
              />
         <argument
             android:name="selectItem"
@@ -155,6 +157,4 @@
             app:destination="@id/exerciseListFragment"
             app:popUpTo="@id/exerciseListFragment" />
     </fragment>
-
-
 </navigation>
